--- a/images/manifest.json
+++ b/images/manifest.json
@@ -6,6 +6,63 @@
   "type" : "Manifest",
   "@context" : "http://iiif.io/api/presentation/3/context.json",
   "items" : [ {
+    "width" : 810,
+    "id" : "https://wmichelle22.github.io/Threeheads/images/case/canvas/",
+    "label" : {
+      "none" : [ "case" ]
+    },
+    "type" : "Canvas",
+    "items" : [ {
+      "id" : "https://wmichelle22.github.io/Threeheads/images/case/AnnoPage/",
+      "type" : "AnnotationPage",
+      "items" : [ {
+        "motivation" : "Painting",
+        "id" : "https://wmichelle22.github.io/Threeheads/images/case/annotation/",
+        "type" : "Annotation",
+        "body" : {
+          "service" : [ {
+            "tiles" : [ {
+              "scaleFactors" : [ 32, 16, 8, 4, 2, 1 ],
+              "width" : 1024,
+              "height" : 1024
+            } ],
+            "protocol" : "http://iiif.io/api/image",
+            "sizes" : [ {
+              "width" : 26,
+              "height" : 15
+            }, {
+              "width" : 51,
+              "height" : 29
+            }, {
+              "width" : 102,
+              "height" : 57
+            }, {
+              "width" : 203,
+              "height" : 114
+            }, {
+              "width" : 405,
+              "height" : 227
+            }, {
+              "width" : 810,
+              "height" : 453
+            } ],
+            "profile" : "http://iiif.io/api/image/2/level0.json",
+            "width" : 810,
+            "@id" : "https://wmichelle22.github.io/Threeheads/images/case",
+            "@context" : "http://iiif.io/api/image/2/context.json",
+            "height" : 453
+          } ],
+          "format" : "image/jpeg",
+          "width" : 810,
+          "id" : "https://wmichelle22.github.io/Threeheads/images/case/full/full/0/default.jpg",
+          "type" : "Image",
+          "height" : 453
+        },
+        "target" : "https://wmichelle22.github.io/Threeheads/images/case/canvas/"
+      } ]
+    } ],
+    "height" : 453
+  }, {
     "width" : 3024,
     "id" : "https://wmichelle22.github.io/Threeheads/images/heritagesite/canvas/",
     "label" : {
