--- a/manifests/manifest2.json
+++ b/manifests/manifest2.json
@@ -5,7 +5,7 @@
   "label" : "Three Heads Fragment of a Wall Painting",
   "metadata" : [ ],
   "description" : [ {
-    "@value" : "Displaced object project testing",
+    "@value" : "Displaced object",
     "@language" : "en"
   } ],
   "license" : "https://creativecommons.org/licenses/by/3.0/",
