Adding manifest.json

--- a/images/manifest.json
+++ b/images/manifest.json
@@ -6,6 +6,63 @@
   "type" : "Manifest",
   "@context" : "http://iiif.io/api/presentation/3/context.json",
   "items" : [ {
+    "width" : 4032,
+    "id" : "https://wmichelle22.github.io/Threeheads/images/IMG0676/canvas/",
+    "label" : {
+      "none" : [ "IMG0676" ]
+    },
+    "type" : "Canvas",
+    "items" : [ {
+      "id" : "https://wmichelle22.github.io/Threeheads/images/IMG0676/AnnoPage/",
+      "type" : "AnnotationPage",
+      "items" : [ {
+        "motivation" : "Painting",
+        "id" : "https://wmichelle22.github.io/Threeheads/images/IMG0676/annotation/",
+        "type" : "Annotation",
+        "body" : {
+          "service" : [ {
+            "tiles" : [ {
+              "scaleFactors" : [ 32, 16, 8, 4, 2, 1 ],
+              "width" : 1024,
+              "height" : 1024
+            } ],
+            "protocol" : "http://iiif.io/api/image",
+            "sizes" : [ {
+              "width" : 126,
+              "height" : 95
+            }, {
+              "width" : 252,
+              "height" : 189
+            }, {
+              "width" : 504,
+              "height" : 378
+            }, {
+              "width" : 1008,
+              "height" : 756
+            }, {
+              "width" : 2016,
+              "height" : 1512
+            }, {
+              "width" : 4032,
+              "height" : 3024
+            } ],
+            "profile" : "http://iiif.io/api/image/2/level0.json",
+            "width" : 4032,
+            "@id" : "https://wmichelle22.github.io/Threeheads/images/IMG0676",
+            "@context" : "http://iiif.io/api/image/2/context.json",
+            "height" : 3024
+          } ],
+          "format" : "image/jpeg",
+          "width" : 4032,
+          "id" : "https://wmichelle22.github.io/Threeheads/images/IMG0676/full/full/0/default.jpg",
+          "type" : "Image",
+          "height" : 3024
+        },
+        "target" : "https://wmichelle22.github.io/Threeheads/images/IMG0676/canvas/"
+      } ]
+    } ],
+    "height" : 3024
+  }, {
     "width" : 800,
     "id" : "https://wmichelle22.github.io/Threeheads/images/banyuan/canvas/",
     "label" : {
