Adding manifest.json

--- a/images/manifest.json
+++ b/images/manifest.json
@@ -7,6 +7,63 @@
   "@context" : "http://iiif.io/api/presentation/3/context.json",
   "items" : [ {
     "width" : 800,
+    "id" : "https://wmichelle22.github.io/Threeheads/images/vafragmentimage/canvas/",
+    "label" : {
+      "none" : [ "vafragmentimage" ]
+    },
+    "type" : "Canvas",
+    "items" : [ {
+      "id" : "https://wmichelle22.github.io/Threeheads/images/vafragmentimage/AnnoPage/",
+      "type" : "AnnotationPage",
+      "items" : [ {
+        "motivation" : "Painting",
+        "id" : "https://wmichelle22.github.io/Threeheads/images/vafragmentimage/annotation/",
+        "type" : "Annotation",
+        "body" : {
+          "service" : [ {
+            "tiles" : [ {
+              "scaleFactors" : [ 32, 16, 8, 4, 2, 1 ],
+              "width" : 1024,
+              "height" : 1024
+            } ],
+            "protocol" : "http://iiif.io/api/image",
+            "sizes" : [ {
+              "width" : 25,
+              "height" : 44
+            }, {
+              "width" : 50,
+              "height" : 87
+            }, {
+              "width" : 100,
+              "height" : 174
+            }, {
+              "width" : 200,
+              "height" : 347
+            }, {
+              "width" : 400,
+              "height" : 694
+            }, {
+              "width" : 800,
+              "height" : 1387
+            } ],
+            "profile" : "http://iiif.io/api/image/2/level0.json",
+            "width" : 800,
+            "@id" : "https://wmichelle22.github.io/Threeheads/images/vafragmentimage",
+            "@context" : "http://iiif.io/api/image/2/context.json",
+            "height" : 1387
+          } ],
+          "format" : "image/jpeg",
+          "width" : 800,
+          "id" : "https://wmichelle22.github.io/Threeheads/images/vafragmentimage/full/full/0/default.jpg",
+          "type" : "Image",
+          "height" : 1387
+        },
+        "target" : "https://wmichelle22.github.io/Threeheads/images/vafragmentimage/canvas/"
+      } ]
+    } ],
+    "height" : 1387
+  }, {
+    "width" : 800,
     "id" : "https://wmichelle22.github.io/Threeheads/images/humboltfragmentimage/canvas/",
     "label" : {
       "none" : [ "humboltfragmentimage" ]
